Fix #33 to vertically align the delete icon

--- a/combine/static/css/styles.css
+++ b/combine/static/css/styles.css
@@ -59,6 +59,8 @@ div.edit_items ul li{
     border-radius: 10px;
     padding: 10px;    
     vertical-align: middle;
+    display : flex;
+    align-items : center;
 }
 div.edit_items ul li:hover{
     background-color: orange;
